--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "ag-grid-community": "^29.3.5",
     "ag-grid-react": "^29.3.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.3.3",
+    "sequelize": "^6.32.0"
   }
 }
