--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ag-grid-react": "^29.3.5",
     "express": "^4.18.2",
     "mysql2": "^3.3.3",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0"
   }
 }
